Uploaded image for project: 'IMPALA'
  1. IMPALA
  2. IMPALA-5799

INSERTs into Kudu can crash if a column is dropped concurrently

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Critical
    • Resolution: Fixed
    • Impala 2.10.0
    • Impala 2.10.0
    • Backend
    • ghx-label-3

    Description

      When inserting into a Kudu table, we check that the table schema matches the values to insert during planning. Once the KuduTableSink opens the KuduTable object, we're guaranteed that the KuduTable's schema won't change.

      However, there's a window of vulnerability between the checks in the FE and opening the table in the BE where the schema could change. The only change that we allow that is incompatible is dropping a column, which can cause Impala to crash.

      Attachments

        Activity

          People

            twmarshall Thomas Tauber-Marshall
            twmarshall Thomas Tauber-Marshall
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: